# AutoTrader

./: .env  README.md  main.py  pyproject.toml
src/api/: __init__.py  base_api.py  exchange.py  models.py  quotation.py
src/database/: base.py  day_candle_repo.py  minute_candle_repo.py  month_candle_repo.py  week_candle_repo.py
src/engine/: v1.py
src/strategy/: v1.py
src/upbit/api/: api.py  exchange.py  models.py  quotation.py  request.py  response.py
src/utils/: date.py
tests/: test.ipynb  test_exchange_api.py  test_quotation_api.py
tests/db/: conftest.py  test_create_table.py  test_insert_data.py  test_query.py
tests/ta/: test_func.py
tests/upbit/: conftest.py  test_exchange_api.py  test_quotation_api.py
