[tool.poetry]
name = "autotrader"
version = "0.1.0"
description = ""
authors = ["jeongjuyoung <insert@kakao.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jwt = "^1.3.1"
python-dotenv = "^1.0.1"
pytest = "^8.0.1"
pyjwt = "^2.8.0"
requests = "^2.31.0"
pydantic = "^2.6.1"
ta = "^0.11.0"
ta-lib = "^0.4.28"
pandas = "^2.2.1"
numpy = "^1.26.4"
sqlalchemy = "^2.0.27"
pandas-ta = "^0.3.14b0"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
